plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = mod_version
group = mod_group_id
def modId = providers.gradleProperty("mod_id").get()

repositories {
    mavenLocal()
    // Create + ecosystem (Flywheel, Ponder)
    maven { url = 'https://maven.createmod.net' }
    // Registrate
    maven { url = 'https://mvn.devos.one/snapshots' }
    // Fuzs / mod resources (transitive helper used by some Create addons)
    maven { url = 'https://raw.githubusercontent.com/Fuzss/modresources/main/maven/' }
    // JitPack - used to resolve Create: Sound of Steam directly from its GitHub repo,
    // since the mod itself is not currently published to a public Maven.
    maven { url = 'https://jitpack.io' }
}

base {
    archivesName = modId
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

//    // Access Transformers - we ship one to widen visibility on a couple of Create / SoS members
//    // when needed. NeoForge's moddev plugin will auto-detect this if present, but we declare it
//    // explicitly for clarity.
//    accessTransformers.from('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', modId
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', modId
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', modId
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll([
                '--mod', modId,
                '--all',
                '--output', file('src/generated/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath()
            ])
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            systemProperty 'forge.logging.console.level', 'debug'

            // No synth-specific JPMS exports required; audio synthesis is fully in-tree Java.
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${modId}" {
            //noinspection GrUnresolvedAccess, GroovyAssignabilityCheck // Justification: NeoForge's DSL is dynamically generated and thus not statically resolvable by the IDE, but it does work at runtime.
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.named("main") {
    resources {
        srcDir 'src/generated/resources'
    }
}


// Mixin annotation processor needs to know where to put the refmap.
// We name it after the mod id to avoid clashes with Create / SoS / etc.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // ---- Mixin (annotation processor only; Mixin runtime is provided by NeoForge) -------------
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"

    // ---- Create + ecosystem (compile + runtime) ----------------------------------------------
    // The :slim classifier excludes Create's bundled libs we don't need at compile time.
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") {
        transitive = false
    }
    implementation("net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")

    // MixinExtras - jar-in-jar so we have a known good version at runtime even if other mods don't bundle it.
    implementation(jarJar("io.github.llamalad7:mixinextras-neoforge:${mixin_extras_version}"))

    // ---- Create: Sound of Steam (the mod we extend) ------------------------------------------
    // Resolved via JitPack from https://github.com/CSOS-Team/SoundOfSteam (1.21-neoforge branch).
    // JitPack will build the repo on first request; subsequent builds are cached.
    // We mark it compileOnly because at runtime we expect the user to have installed the
    // released SoS jar via the mods/ folder (or for `runClient` to pull it from JitPack as well).
    compileOnly("com.github.CSOS-Team:SoundOfSteam:${sos_version}") {
        // The JitPack-built jar already bundles its own deps via shading; we only need its API
        // surface for compilation, so suppress its transitive graph.
        transitive = false
    }
    // Optionally pull it in at runtime too, so `runClient` works without manually placing the jar.
    // Comment this line out and drop the SoS jar into run/mods/ if JitPack is unavailable offline.
    runtimeOnly("com.github.CSOS-Team:SoundOfSteam:${sos_version}") {
        transitive = false
    }
}

// Force UTF-8 for source compilation, and tell the Mixin annotation processor where
// to write the generated refmap. The refmap filename must match the one referenced from
// our mixin config JSON (src/main/resources/createpolyphony.mixins.json).
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    def refmapFile = layout.buildDirectory.file("refmaps/${modId}.refmap.json").get().asFile.absolutePath
    options.compilerArgs += [
        "-AoutRefMapFile=${refmapFile}".toString(),
        // MCP obfuscation service exposes searge/notch in this toolchain.
        "-AdefaultObfuscationEnv=searge"
    ]
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.named("main") {
    resources {
        srcDir(generateModMetadata)
    }
}
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            //noinspection GrUnresolvedAccess, GroovyAssignabilityCheck // Justification: NeoForge's DSL is dynamically generated and thus not statically resolvable by the IDE, but it does work at runtime.
            from components.java
    }
    }
    repositories {
        maven {
            url = uri("${project.projectDir}/repo")
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
